# invenio-integration-tests

./: .gitignore  .travis.yml  README.md  blacklisted_pkgs.sed  blocklisted_pkgs.sed  docker-compose.yml  extra_reqs.txt  invenio-forks.yaml  oarepo_setup.cfg.template  pyproject.toml  requirements-blacklisted.txt  requirements-extra.txt  requirements.in  run_locally.sh  run_tests.sh  setup.py  setup.py.template
.github/: dependabot.yml
.github/actions/install_build_tools/: action.yaml
.github/workflows/: 01-extract-requirements.yaml  02-get-fork-versions.yaml  03-install-rdm-and-test.yaml  04-create-fork.yaml  05-create-oarepo-package.yaml  06-simple-repository-pytest.yaml  07-simple-repository-rest.yaml  08-simple-repository-ui.yaml  09-commit-push-oarepo.yaml  codeql.yml  create_oarepo_release.yaml  cron.yml  extract_requirements.yaml  from_travis.yml  get_fork_versions.yaml  install_rdm_and_test.yaml  main.yaml  main.yml  old.yml  p2oarepo.section.tpl  p2oarepo.yml  test1.yml  trigger.txt  ui_integration_tests.yml
build_tools/: pyproject.toml
build_tools/src/build_tools/: __init__.py  apply_entrypoints.py  apply_versions_and_forks_to_pyproject.py  bump_version.py  convert_forks_to_json.py  find_bad_package.py  fix_versions_in_venv.py  get_fork_versions.py  install_frozen_dependencies.py  select_forks_by_venv.py
pdm/: pyproject.toml
rdm/: invenio-cli.cfg
scripts/: blacklisted_pkgs.sed  bootstrap  bootstrap.sh  export_requirements.py  generate_oarepo_setup.sh  generate_setup.py  generate_setup.sh  get_react_dependencies.py  init  merge_requirements_to_pyproject_toml.py  poetry2reqs.py  process_reqs.sh  push_back.sh  test.sh  test_push.sh  test_rest.sh  travis-push.sh
simple_repo/: pyproject.toml
simple_repo/instance/: invenio.cfg  invenio.db
simple_repo/simple_repo/: model.py  webpack.py
simple_repo/simple_repo/assets/semantic-ui/js/api/: client.js
simple_repo/simple_repo/assets/semantic-ui/js/form/: IntegrationTestsForm.jsx  PublishButton.jsx  index.js
simple_repo/simple_repo/assets/semantic-ui/js/search/: ResultsListItem.jsx  index.js
simple_repo/simple_repo/assets/semantic-ui/less/: theme.config  theme.less
simple_repo/simple_repo/assets/semantic-ui/less/site/: css.overrides
simple_repo/simple_repo/assets/semantic-ui/less/site/globals/: site.variables
simple_repo/simple_repo/assets/semantic-ui/translations/simple_repo/: i18next.js
simple_repo/simple_repo/mappings/v7/simple_repo/: test-record-v1.0.0.json
simple_repo/simple_repo/templates/simple_repo/: create.html  detail.html  header_login.html  search_page.html
simple_repo/tests/: conftest.py  test_resource.py  test_service.py  utils.py
ssl/: test.crt  test.key
ui_tests/: package-lock.json  package.json
ui_tests/pageobjects/: basepage.js  detailpage.js  formpage.js  loginpage.js  searchpage.js
ui_tests/test/: invenioIntegrationTests.spec.js
ui_tests/tests/: invenioIntegrationTests.spec.js
upload/: p2oarepo_action-invenio3.3-100.flg  p2oarepo_action-invenio3.3-103.flg  p2oarepo_action-invenio3.3-104.flg  p2oarepo_action-invenio3.3-105.flg  p2oarepo_action-invenio3.3-107.flg  p2oarepo_action-invenio3.3-108.flg  p2oarepo_action-invenio3.3-109.flg  p2oarepo_action-invenio3.3-110.flg  p2oarepo_action-invenio3.3-111.flg  p2oarepo_action-invenio3.3-112.flg  p2oarepo_action-invenio3.3-113.flg  p2oarepo_action-invenio3.3-119.flg  p2oarepo_action-invenio3.3-122.flg  p2oarepo_action-invenio3.3-123.flg  p2oarepo_action-invenio3.3-124.flg  p2oarepo_action-invenio3.3-126.flg  p2oarepo_action-invenio3.3-127.flg  p2oarepo_action-invenio3.3-128.flg  p2oarepo_action-invenio3.3-129.flg  p2oarepo_action-invenio3.3-132.flg  p2oarepo_action-invenio3.3-133.flg  p2oarepo_action-invenio3.3-134.flg  p2oarepo_action-invenio3.3-136.flg  p2oarepo_action-invenio3.3-137.flg  p2oarepo_action-invenio3.3-138.flg  p2oarepo_action-invenio3.3-139.flg  p2oarepo_action-invenio3.3-140.flg  p2oarepo_action-invenio3.3-141.flg  p2oarepo_action-invenio3.3-142.flg  p2oarepo_action-invenio3.3-143.flg  p2oarepo_action-invenio3.3-145.flg  p2oarepo_action-invenio3.3-147.flg  p2oarepo_action-invenio3.3-148.flg  p2oarepo_action-invenio3.3-149.flg  p2oarepo_action-invenio3.3-150.flg  p2oarepo_action-invenio3.3-151.flg  p2oarepo_action-invenio3.3-153.flg  p2oarepo_action-invenio3.3-154.flg  p2oarepo_action-invenio3.3-155.flg  p2oarepo_action-invenio3.3-156.flg  (+360 more)
(+4 files in other folders)
