[tool]

[tool.poetry]
name = "invenio-integration-tests"
version = "0.0.1"
description = "invenio integration tests"
license = "MIT"
keywords = ["Invenio", "oarepo"]
classifiers = ["Environment :: Web Environment", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent", "Programming Language :: Python", "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.8", "Development Status :: 3 - Alpha"
]
homepage = "https://github.com/oarepo/invenio-integration-tests"
authors = ["Tomas HLava @ CESNET <hlava@cesnet.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
invenio = { optional = true, version = "^3.5.0*,<3.6.0", allow-prereleases=true, extras = [ "base","metadata","files","postgresql","elasticsearch7" ] }
flask-oauthlib = { optional = true, version = "*" }
invenio-oauthclient = { optional = true, version = "*" }
invenio-oauth2server = { optional = true, version = "*" }
invenio-logging = { optional = true, version = "*", extras = [ "sentry-sdk" ] }

sqlalchemy = "<1.4.0"
#flask-caching = ">1.10.1"
marshmallow-utils = "^0.4"
celery = ">=5.2.2"
pillow = ">=8.3.2"
s3-client-lib = ">=0.1.9"
jsonschema = ">=3.0.0,<4.0.0"
flask = "<2.0.0"
wtforms = "<3.0.0"
flask-wtf = "<1.0.0"
lxml = ">=4.6.5"

[tool.poetry.extras]
"invenio3.5" = [
  "invenio",
  "invenio-accounts",
  "requests",
  "s3-client-lib",
  "flask-oauthlib",
  "invenio-oauthclient",
  "invenio-oauth2server",
  "importlib_metadata"
]
"invenio3.5test" = [
  "invenio",
  "invenio-accounts",
  "requests",
  "s3-client-lib",
  "flask-oauthlib",
  "invenio-oauthclient",
  "invenio-oauth2server",
  "importlib_metadata"
]
