[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Mirek Simek", email = "miroslav.simek@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/oarepo#egg=oarepo",
]
